<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>object_detection</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ubuntu@todo.todo">ubuntu</maintainer>
  <license>TODO: License declaration</license>

  <!-- ros uses opencv on local so need to install it seperately to work
       with cv bridge -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>

  <!-- Added ultralytics exec dependancy, need to pip install ultralytics on local -->
  <exec_depend>python3-ultralytics</exec_depend> 

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
